--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "artesaos/seotools",
+  "name": "farukix/seotools",
   "description": "SEO Tools for Laravel and Lumen",
   "keywords": ["laravel5", "lumen" ,"seo", "seotools", "webmaster", "metatags", "opengraph"],
   "license": "MIT",
@@ -22,12 +22,12 @@
   },
   "autoload": {
     "psr-4": {
-      "Artesaos\\SEOTools\\": "src/SEOTools/"
+      "farukix\\SEOTools\\": "src/SEOTools/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Artesaos\\SEOTools\\Test\\": "tests/"
+      "farukix\\SEOTools\\Test\\": "tests/"
     }
   },
   "config": {
